refactor jenkinsfile to have sonarqube analisys